feat: init auto-responder

--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,22 @@
 {
-  "name": "ts-template",
-  "description": "ts-template for UbiquityOS plugins.",
-  "ubiquity:listeners": ["issue_comment.created", "pull_request_review_comment.created"],
-  "commands": {
-    "hello": {
-      "ubiquity:example": "/hello argument",
-      "description": "Hello command with an argument."
-    }
-  },
+  "name": "Auto Responder",
+  "description": "Issue automated responses on a per-repository level.",
+  "ubiquity:listeners": ["issue_comment.created"],
   "configuration": {
     "default": {},
     "type": "object",
     "properties": {
-      "configurableResponse": {
-        "default": "Hello, world!",
-        "type": "string"
-      },
-      "customStringsUrl": {
-        "type": "string"
+      "automatedResponses": {
+        "type": "object",
+        "default": {
+          "auto-responder": "Hello! Thanks for your comment."
+        },
+        "properties": {
+          "type": "object",
+          "additionalProperties": {
+            "type": "string"
+          }
+        }
       }
     }
   }
